--- a/ERCS/erc-1155.md
+++ b/ERCS/erc-1155.md
@@ -577,7 +577,7 @@ fr.json:
 
 ### Approval
 
-The function `setApprovalForAll` allows an operator to manage one's entire set of tokens on behalf of the approver. To permit approval of a subset of token IDs, an interface such as [ERC-1761 Scoped Approval Interface](./eip-1761.md) is suggested.
+The function `setApprovalForAll` allows an operator to manage one's entire set of tokens on behalf of the approver. To permit approval of a subset of token IDs, an interface such as [ERC-1761 Scoped Approval Interface](./erc-1761.md) is suggested.
 The counterpart `isApprovedForAll` provides introspection into any status set by `setApprovalForAll`.
 
 An owner SHOULD be assumed to always be able to operate on their own tokens regardless of approval status, so should SHOULD NOT have to call `setApprovalForAll` to approve themselves as an operator before they can operate on them.  
